# CLIP-VLM

./: CLIP_Inference.ipynb  CLIP_VLM _training.ipynb  README.md  batch_eval.py  colab_inference .py  data.py  main.py  model.py  pyproject.toml  training.py
