[project]
name = "clip-vlm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nuscenes-devkit>=1.2.0",
    "open-clip-torch>=3.2.0",
    "opencv-python>=4.11.0.86",
    "peft>=0.17.1",
    "transformers>=4.57.1",
    "bitsandbytes>=0.45.0",
]
